[gd_scene load_steps=3 format=3 uid="uid://frmsqrvckd2f"]

[ext_resource type="Script" uid="uid://cbea58btcl6c" path="res://addons/nexus_vertex_painter/painter_dock.gd" id="1_6ldxv"]
[ext_resource type="Script" uid="uid://ccdx60vdnraf7" path="res://addons/nexus_vertex_painter/UI/collapsible_category.gd" id="2_gpvri"]

[node name="PainterDock" type="VBoxContainer"]
process_mode = 4
modulate = Color(0.5, 0.5, 0.5, 0.5)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ldxv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_gpvri")
title = "Settings"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="BrushSize_Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Size :"

[node name="BrushSizeSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
localize_numeral_system = false
accessibility_name = "Brush Size"
min_value = 0.01
max_value = 5.0
step = 0.01
value = 1.0

[node name="BrushSizeLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "1.0"
alignment = 1
flat = true
select_all_on_focus = true

[node name="BrushFalloff_Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Falloff :"

[node name="BrushFalloffSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
accessibility_name = "Brush Size"
max_value = 1.0
step = 0.01
value = 0.5

[node name="BrushSizeLineEdit2" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.5"
alignment = 1
flat = true
select_all_on_focus = true

[node name="BrushStrength_Label" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Strength : "

[node name="BrushStrengthSlider" type="HSlider" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
accessibility_name = "Brush Strength"
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.25

[node name="BrushSizeLineEdit3" type="LineEdit" parent="VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0.25"
alignment = 1
flat = true
select_all_on_focus = true

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_gpvri")
title = "Channels & Layers"

[node name="ChannelGridContainer" type="GridContainer" parent="VBoxContainer2"]
layout_mode = 2
columns = 4

[node name="R_Btn" type="Button" parent="VBoxContainer2/ChannelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "R"

[node name="G_Btn" type="Button" parent="VBoxContainer2/ChannelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "G"

[node name="B_Btn" type="Button" parent="VBoxContainer2/ChannelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "B"

[node name="A_Btn" type="Button" parent="VBoxContainer2/ChannelGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "A"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("2_gpvri")
title = "Tools"

[node name="BlendModeGridContainer" type="GridContainer" parent="VBoxContainer3"]
layout_mode = 2
columns = 2

[node name="Add_Button" type="Button" parent="VBoxContainer3/BlendModeGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "Add"

[node name="Substract_Button" type="Button" parent="VBoxContainer3/BlendModeGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Substract"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer3"]
layout_mode = 2

[node name="BlendModeGridContainer2" type="GridContainer" parent="VBoxContainer3"]
layout_mode = 2
columns = 2

[node name="Fill_Button" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fill"

[node name="Clear_Button" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Clear"

[node name="Proc_TopDown_Btn" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Top/Down"

[node name="Proc_BottomUp_Btn" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Bottom/Up"

[node name="Proc_Slope_Btn" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Slope"

[node name="Proc_Noise_Btn" type="Button" parent="VBoxContainer3/BlendModeGridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Noise"
